--- a/src/components/static/Navigation.astro
+++ b/src/components/static/Navigation.astro
@@ -26,7 +26,7 @@ const menuItems: MenuItem[] = [
     ],
   },
   { label: "Carports", path: "/carports" },
-  { label: "Services", path: "/services" },
+  // { label: "Services", path: "/services" },
   { label: "Finance", path: "/finance" },
   { label: "FAQ", path: "/faq" },
   { label: "About", path: "/about" },
