--- a/src/components/contact/ContactCategory.astro
+++ b/src/components/contact/ContactCategory.astro
@@ -13,7 +13,7 @@ interface Props {
 const { title, isAccordionOnMobile=false, align='left', mobileAlign='center', bulleted=false, maxWidth='' }: Props = Astro.props;
 ---
 
-<li class="w-full md:w-auto">
+<li class="w-full md:w-auto list-none">
   <mobile-accordion data-title={title}>
     <button class=`cursor-pointer w-full md:w-auto ${isAccordionOnMobile? 'md:hidden' : 'hidden'} pb-2 border-b-1 border-white`>
       <div class="flex justify-between  items-center gap-3">
@@ -26,15 +26,6 @@ const { title, isAccordionOnMobile=false, align='left', mobileAlign='center', bu
       <slot />
     </ul>
   </mobile-accordion>
-  <!-- <button class="">
-    <div class="flex gap-3 items-center">
-      <h2 class="text-xl font-semibold text-center md:text-left">{title}</h2>
-      {isAccordionOnMobile && <Icon name="mdi:chevron-down" />}
-    </div>
-  </button>
-  <ul class=`${isAccordionOnMobile ? 'hidden md:block' : ''} flex flex-col ${maxWidth} gap-2 py-2 ${bulleted ? 'list-disc pl-4' : ''}`>
-    <slot />
-  </ul> -->
 </li>
 
 
@@ -42,7 +33,7 @@ const { title, isAccordionOnMobile=false, align='left', mobileAlign='center', bu
   class MobileAccordion extends HTMLElement {
     connectedCallback() {
       const button = this.querySelector("button");
-      const { title } = this.dataset;
+      const { title, rotate='-rotate-180' } = this.dataset;
 
       button?.addEventListener("click", () => {
         console.log('clicked');
@@ -53,11 +44,11 @@ const { title, isAccordionOnMobile=false, align='left', mobileAlign='center', bu
         if (isHidden) {
           ul?.classList.remove('hidden');
           ul?.classList.add('flex');
-          icon?.classList.add('-rotate-180')
+          icon?.classList.add(rotate)
         } else {
           ul?.classList.add('hidden');
           ul?.classList.remove('flex');
-          icon?.classList.remove('-rotate-180')
+          icon?.classList.remove(rotate)
         }
 
         // document
